[package]
name = "tokenizer-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
lindera-core = "0.27.1"
lindera-dictionary = "0.27.1"
lindera-tokenizer = { version = "0.27.1", features = ["ipadic"] }
vibrato = "0.5.1"
zstd = "0.13.0"
