[package]
name = "ve"
version = "0.1.2"
edition = "2021"

[lib]
name = "ve"
path = "src/lib.rs"

[[bin]]
name = "test"
path = "src/test.rs"

[features]
serde = ["dep:serde"]

[dependencies]
anyhow = "1.0.75"
serde = { version = "1.0.190", optional = true, features = ["derive"] }
vibrato = "0.5.1"
zstd = "0.13.0"
